# DAFX_2_Daisy_lib

./: CHECKPOINT.md  README.md
examples/: CMakeLists.txt
plans/: DAFX_DaisySP_Implementation_Plan.md  Phase2_Phase3_Parallel_Execution_Plan.md  Python_Execution_Scripts_Plan.md  completion_monitor.md
python_validation_infrastructure/src/validation_infrastructure/: __init__.py
python_validation_infrastructure/src/validation_infrastructure/benchmarking/: __init__.py
src/effects/: tube.cpp  tube.h  wahwah.cpp
src/filters/: highshelving.cpp  lowshelving.cpp  peakfilter.cpp
src/modulation/: ringmod.cpp  vibrato.cpp  vibrato.h
src/spatial/: stereopan.cpp
src/utility/: fft_handler.h
tests/: CMakeLists.txt  test_peakfilter.cpp  test_princarg.cpp  test_ringmod.cpp  test_stereopan.cpp  test_tube.cpp  test_wahwah.cpp
